2006-09-22  Mark D. Baushke  <mdb@gnu.org>

	* configure.in: Drop gl_FUNC_MMAP_ANON requirement.
	* Makefile.in, configure, aclocal.m4, config.h.in, configure:
	Regenerated.
	* maint-aux/Makefile.in: Ditto.
	* maint-aux/gnulib-filelist.txt: Update from GNULIB.

2006-09-12  Derek Price  <derek@ximbiot.com>

	* NEWS: Note new %T commitinfo flag.

2006-09-06  Derek Price  <derek@ximbiot.com>

	* NEWS: Note apply_rcs_diff speedup.

2006-09-02  Mark D. Baushke  <mdb@gnu.org>

	* Makefile.in, aclocal.m4, config.h.in, configure: Regenerated.
	* maint-aux/Makefile.in: Ditto.
	* maint-aux/gnulib-filelist.txt: Update from GNULIB.

2006-08-28  Derek Price  <derek@ximbiot.com>

	* NEWS: Note strstr ("/./") assertion fix.

2006-08-24  Derek Price  <derek@ximbiot.com>

	[bug #17032]
	* NEWS: Note patch w/Name keyword fix.

2006-08-23  Mark D. Baushke  <mdb@gnu.org>

	* Makefile.in, aclocal.m4, config.h.in, configure: Regenerated.
	* maint-aux/gnulib-update: Update to drop '--doc-base doc'
	* maint-aux/gnulib-filelist.txt: Update from GNULIB.
	
2006-08-21  Mark D. Baushke  <mdb@gnu.org>

	* Makefile.in, aclocal.m4, config.h.in, configure,
	maint-aux/Makefile.in: Regenerated.
	* maint-aux/gnulib-filelist.txt: Update from GNULIB.

2006-08-16  Mark D. Baushke  <mdb@gnu.org>

	* Makefile.in, aclocal.m4, config.h.in, configure,
	maint-aux/Makefile.in: Regenerated.
	* maint-aux/gnulib-filelist.txt: Update from GNULIB.
	* maint-aux/gnulib-update: Specify --doc-base doc for gnulib-tool.

2006-08-12  Mark D. Baushke  <mdb@gnu.org>

	* configure.in (HAVE_SYS_WAIT_H): Needed by lib/wait.h
	* config.h.in, configure: Regenerated.
	
2006-07-17  Derek Price  <derek@ximbiot.com>

	* FAQ, INSTALL, README: Update Copyright notice.
	* HACKING: Ditto. Update Savannah URLs.

2006-07-11  Derek Price  <derek@ximbiot.com>

	* configure.in: Don't check for <direct.h>.

2006-07-10  Jim Hyslop <jhyslop@dreampossible.ca>

	* cvsnt.dsp: remove windows-NT/ndir.(c,h), added 