@@ -1,7 +1,5 @@
 build-aux/config.rpath
 doc/getdate.texi
-lib/__fpending.c
-lib/__fpending.h
 lib/alloca.c
 lib/alloca_.h
 lib/allocsa.c
@@ -9,8 +7,8 @@ lib/allocsa.h
 lib/allocsa.valgrind
 lib/asnprintf.c
 lib/asprintf.c
-lib/at-func.c
 lib/atexit.c
+lib/at-func.c
 lib/base64.c
 lib/base64.h
 lib/basename.c
@@ -21,34 +19,36 @@ lib/canonicalize.h
 lib/chdir-long.c
 lib/chdir-long.h
 lib/chown.c
-lib/close-stream.c
-lib/close-stream.h
 lib/closeout.c
 lib/closeout.h
+lib/close-stream.c
+lib/close-stream.h
 lib/creat-safer.c
 lib/cycle-check.c
 lib/cycle-check.h
 lib/dev-ino.h
 lib/dirname.c
 lib/dirname.h
-lib/dup-safer.c
 lib/dup2.c
+lib/dup-safer.c
 lib/error.c
 lib/error.h
-lib/exit.h
 lib/exitfail.c
 lib/exitfail.h
+lib/exit.h
 lib/fchmodat.c
 lib/fchown-stub.c
+lib/fcntl_.h
 lib/fcntl--.h
 lib/fcntl-safer.h
-lib/fcntl_.h
 lib/fd-safer.c
 lib/filenamecat.c
 lib/filenamecat.h
 lib/fnmatch.c
 lib/fnmatch_.h
 lib/fnmatch_loop.c
+lib/__fpending.c
+lib/__fpending.h
 lib/ftruncate.c
 lib/gai_strerror.c
 lib/getaddrinfo.c
@@ -68,8 +68,8 @@ lib/getndelim2.c
 lib/getndelim2.h
 lib/getnline.c
 lib/getnline.h
-lib/getopt.c
 lib/getopt1.c
+lib/getopt.c
 lib/getopt_.h
 lib/getopt_int.h
 lib/getpagesize.h
@@ -78,9 +78,9 @@ lib/getpass.h
 lib/gettext.h
 lib/gettime.c
 lib/gettimeofday.c
-lib/glob-libc.h
 lib/glob.c
 lib/glob_.h
+lib/glob-libc.h
 lib/inet_ntop.c
 lib/inet_ntop.h
 lib/intprops.h
@@ -102,17 +102,17 @@ lib/mempcpy.h
 lib/memrchr.c
 lib/memrchr.h
 lib/minmax.h
-lib/mkdir.c
 lib/mkdirat.c
+lib/mkdir.c
 lib/mkstemp.c
 lib/mkstemp.h
 lib/mktime.c
 lib/nanosleep.c
-lib/open-safer.c
-lib/openat-die.c
-lib/openat-priv.h
 lib/openat.c
+lib/openat-die.c
 lib/openat.h
+lib/openat-priv.h
+lib/open-safer.c
 lib/pathmax.h
 lib/pipe-safer.c
 lib/printf-args.c
@@ -125,10 +125,10 @@ lib/readlink.c
 lib/realloc.c
 lib/regcomp.c
 lib/regex.c
+lib/regexec.c
 lib/regex.h
 lib/regex_internal.c
 lib/regex_internal.h
-lib/regexec.c
 lib/rename.c
 lib/rpmatch.c
 lib/same-inode.h
@@ -140,12 +140,12 @@ lib/size_max.h
 lib/snprintf.c
 lib/snprintf.h
 lib/socket_.h
-lib/stat-macros.h
 lib/stat_.h
+lib/stat-macros.h
 lib/stdbool_.h
 lib/stdint_.h
-lib/strcase.h
 lib/strcasecmp.c
+lib/strcase.h
 lib/strdup.c
 lib/strdup.h
 lib/strerror.c
@@ -155,10 +155,10 @@ lib/stripslash.c
 lib/strncasecmp.c
 lib/strndup.c
 lib/strndup.h
-lib/strnlen.c
-lib/strnlen.h
 lib/strnlen1.c
 lib/strnlen1.h
+lib/strnlen.c
+lib/strnlen.h
 lib/strstr.c
 lib/strstr.h
 lib/strtoimax.c
@@ -207,31 +207,31 @@ m4/canonicalize.m4
 m4/chdir-long.m4
 m4/chown.m4
 m4/clock_time.m4
-m4/close-stream.m4
 m4/closeout.m4
+m4/close-stream.m4
 m4/codeset.m4
 m4/cycle-check.m4
 m4/d-ino.m4
-m4/d-type.m4
 m4/dirname.m4
 m4/dos.m4
 m4/double-slash-root.m4
+m4/d-type.m4
 m4/dup2.m4
 m4/eealloc.m4
 m4/eoverflow.m4
 m4/error.m4
 m4/exitfail.m4
 m4/extensions.m4
-m4/fcntl-safer.m4
 m4/fcntl_h.m4
+m4/fcntl-safer.m4
 m4/filenamecat.m4
 m4/fnmatch.m4
 m4/fpending.m4
 m4/ftruncate.m4
 m4/getaddrinfo.m4
 m4/getcwd-abort-bug.m4
-m4/getcwd-path-max.m4
 m4/getcwd.m4
+m4/getcwd-path-max.m4
 m4/getdate.m4
 m4/getdelim.m4
 m4/gethostname.m4
@@ -245,18 +245,18 @@ m4/getpass.m4
 m4/gettext.m4
 m4/gettime.m4
 m4/gettimeofday.m4
-m4/glibc2.m4
 m4/glibc21.m4
+m4/glibc2.m4
 m4/glob.m4
 m4/iconv.m4
 m4/inet_ntop.m4
 m4/intdiv0.m4
 m4/intmax.m4
 m4/intmax_t.m4
-m4/inttypes-h.m4
-m4/inttypes-pri.m4
-m4/inttypes.m4
 m4/inttypes_h.m4
+m4/inttypes-h.m4
+m4/inttypes.m4
+m4/inttypes-pri.m4
 m4/lchown.m4
 m4/lcmessage.m4
 m4/lib-ld.m4
@@ -302,8 +302,8 @@ m4/sockpfaf.m4
 m4/ssize_t.m4
 m4/stat-macros.m4
 m4/stdbool.m4
-m4/stdint.m4
 m4/stdint_h.m4
+m4/stdint.m4
 m4/strcase.m4
 m4/strdup.m4
 m4/strerror.m4
@@ -312,10 +312,10 @@ m4/strndup.m4
 m4/strnlen.m4
 m4/strstr.m4
 m4/strtoimax.m4
-m4/strtol.m4
 m4/strtoll.m4
-m4/strtoul.m4
+m4/strtol.m4
 m4/strtoull.m4
+m4/strtoul.m4
 m4/strtoumax.m4
 m4/sys_socket_h.m4
 m4/sys_stat_h.m4
@@ -325,8 +325,8 @@ m4/tm_gmtoff.m4
 m4/tzset.m4
 m4/uintmax_t.m4
 m4/ulonglong.m4
-m4/unistd-safer.m4
 m4/unistd_h.m4
+m4/unistd-safer.m4
 m4/unlocked-io.m4
 m4/vasnprintf.m4
 m4/vasprintf.m4
