@@ -1,3 +1,8 @@
+2006-09-25  Mark D. Baushke  <mdb@gnu.org>
+
+	* config.h.in, configure: Regenerated.
+	maint-aux/gnulib-filelist.txt: Update from GNULIB.
+
 2006-09-22  Mark D. Baushke  <mdb@gnu.org>
 
 	* configure.in: Drop gl_FUNC_MMAP_ANON requirement.
